src/styles/elements/_pn-nav.css
@layer components {
    .pn-nav {
        --pn-nav-position: fixed;
        --pn-nav-top: 50%;
        --pn-nav-left: 0;
        --pn-nav-width: 100%;
        --pn-nav-height: var(--spacing-xxxl);
        --pn-nav-tranform: translateY(-50%);
        --pn-nav-z-index: var(--z-index-pn-nav);

        --pn-nav-link-position: absolute;
        --pn-nav-link-bg-color: var(--color-primary);
        --pn-nav-link-text-decoration: none;
        --pn-nav-link-height: 100%;
        --pn-nav-link-display: flex;

        --pn-nav-link-prev-left: -4px;
        --pn-nav-link-next-right: -4px;

        --pn-nav-button-bg-color: var(--pn-nav-link-bg-color);
        --pn-nav-button-height: var(--pn-nav-height);
        --pn-nav-button-width: calc(var(--pn-nav-height) / 2);
        --pn-nav-button-display: flex;
        --pn-nav-button-align-items: center;
        --pn-nav-button-justify-content: center;
        --pn-nav-button-border-radius: var(--border-radius-circle);
        --pn-nav-button-z-index: 1;
        --pn-nav-button-transition: background-color var(--animation-duration-normal) var(--animation-easing-normal);

        --pn-nav-content-display: flex;
        --pn-nav-content-align-items: center;
        --pn-nav-content-justify-content: center;
        --pn-nav-content-flex-direction: row;
        --pn-nav-content-position: absolute;
        --pn-nav-content-top: 0;
        --pn-nav-content-width: max-content;
        --pn-nav-content-height: 100%;
        --pn-nav-content-background-color: var(--color-primary);
        --pn-nav-content-padding: var(--spacing-s);
        --pn-nav-content-gap: var(--spacing-normal);
        --pn-nav-content-transition:
            transform var(--animation-duration-normal) var(--animation-easing-normal),
            background-color var(--animation-duration-normal) var(--animation-easing-normal);

        --pn-nav-title-color: var(--color-primary-dark);
        --pn-nav-title-font-family: var(--font-family-headline);
        --pn-nav-title-font-size: var(--font-size-normal);
        --pn-nav-title-margin: 0;

        --pn-nav-image-size: calc(var(--pn-nav-height) - var(--spacing-normal));
        --pn-nav-image-border-radius: var(--border-radius-circle);
        --pn-nav-image-object-fit: cover;

        --pn-nav-icon-transition: background-color var(--animation-duration-normal) var(--animation-easing-normal);

        position: var(--pn-nav-position);
        top: var(--pn-nav-top);
        left: var(--pn-nav-left);
        width: var(--pn-nav-width);
        height: var(--pn-nav-height);
        transform: var(--pn-nav-tranform);
        z-index: var(--pn-nav-z-index);
    }

    .pn-nav__link {
        position: var(--pn-nav-link-position);
        text-decoration: var(--pn-nav-link-text-decoration);
        height: var(--pn-nav-link-height);
        display: var(--pn-nav-link-display);
        flex-direction: var(--pn-nav-link-flex-direction);
    }

    .pn-nav__button {
        background-color: var(--pn-nav-button-bg-color);
        height: var(--pn-nav-button-height);
        width: var(--pn-nav-button-width);
        display: var(--pn-nav-button-display);
        align-items: var(--pn-nav-button-align-items);
        justify-content: var(--pn-nav-button-justify-content);
        border-radius: var(--pn-nav-button-border-radius);
        z-index: var(--pn-nav-button-z-index);
        transition: var(--pn-nav-button-transition);
    }

    .pn-nav__icon {
        transform: var(--pn-nav-icon-transform);
        transition: var(--pn-nav-icon-transition);
    }

    .pn-nav__content {
        display: var(--pn-nav-content-display);
        align-items: var(--pn-nav-content-align-items);
        justify-content: var(--pn-nav-content-justify-content);
        gap: var(--pn-nav-content-gap);
        flex-direction: var(--pn-nav-content-flex-direction);
        position: var(--pn-nav-content-position);
        top: var(--pn-nav-content-top);
        left: var(--pn-nav-content-left);
        right: var(--pn-nav-content-right);
        width: var(--pn-nav-content-width);
        height: var(--pn-nav-content-height);
        background-color: var(--pn-nav-content-background-color);
        padding: var(--pn-nav-content-padding);
        border-radius: var(--pn-nav-content-border-radius);
        transform: var(--pn-nav-content-transform);
        transition: var(--pn-nav-content-transition);
    }

    .pn-nav__title {
        color: var(--pn-nav-title-color);
        font-family: var(--pn-nav-title-font-family);
        font-size: var(--pn-nav-title-font-size);
        margin: var(--pn-nav-title-margin);
    }

    .pn-nav__image {
        height: var(--pn-nav-image-size);
        width: var(--pn-nav-image-size);
        border-radius: var(--pn-nav-image-border-radius);
        object-fit: var(--pn-nav-image-object-fit);
    }

    /* PREV BUTTON */
    .pn-nav__link[button-direction="prev"] {
        --pn-nav-link-flex-direction: row-reverse;
        --pn-nav-button-border-radius: 0 var(--pn-nav-button-width) var(--pn-nav-button-width) 0;
        --pn-nav-icon-transform: translateX(calc(var(--spacing-xs) * -1));
        --pn-nav-content-left: var(--pn-nav-button-width);
        --pn-nav-content-right: unset;
        --pn-nav-content-border-radius: 0 var(--pn-nav-button-width) var(--pn-nav-button-width) 0;
        --pn-nav-content-transform: translateX(calc(-100% - var(--pn-nav-button-width)));
        --pn-nav-content-padding: var(--spacing-s) var(--spacing-s) var(--spacing-s) var(--pn-nav-button-width);

        left: var(--pn-nav-link-prev-left);
    }

    .pn-nav[image-hidden] .pn-nav__link[button-direction="prev"] {
        --pn-nav-content-padding: var(--spacing-s) var(--spacing-m) var(--spacing-s) var(--pn-nav-button-width);
    }

    /* NEXT BUTTON */
    .pn-nav__link[button-direction="next"] {
        --pn-nav-link-flex-direction: row;
        --pn-nav-content-flex-direction: row-reverse;
        --pn-nav-button-border-radius: var(--pn-nav-button-width) 0 0 var(--pn-nav-button-width);
        --pn-nav-icon-transform: translateX(var(--spacing-xs));
        --pn-nav-content-left: unset;
        --pn-nav-content-right: var(--pn-nav-button-width);
        --pn-nav-content-border-radius: var(--pn-nav-button-width) 0 0 var(--pn-nav-button-width);
        --pn-nav-content-transform: translateX(calc(100% + var(--pn-nav-button-width)));
        --pn-nav-content-padding: var(--spacing-s) var(--pn-nav-button-width) var(--spacing-s) var(--spacing-s);

        right: var(--pn-nav-link-next-right);
    }

    .pn-nav[image-hidden] .pn-nav__link[button-direction="next"] {
        --pn-nav-content-padding: var(--spacing-s) var(--pn-nav-button-width) var(--spacing-s) var(--spacing-m);
    }

    @media (hover: hover) {
        .pn-nav__link:hover {
            --pn-nav-button-bg-color: var(--color-primary-light);
            --pn-nav-content-background-color: var(--color-primary-light);
        }

        .pn-nav__link:hover .icon {
            --icon-color: var(--color-primary-dark);
        }

        .pn-nav__link[button-direction="prev"]:hover {
            --pn-nav-content-transform: translateX(calc(var(--pn-nav-button-width) * -1));
        }

        .pn-nav__link[button-direction="next"]:hover {
            --pn-nav-content-transform: translateX(var(--pn-nav-button-width));
        }
    }
}

